# ReSTIR-SSS

./: .gitignore  .gitmodules  LICENSE  README.md
ReSTIRSSS/: .clang-format  CMakeLists.txt
ReSTIRSSS/include/denoiser/: DenoiserOptiX.h
ReSTIRSSS/include/restirsss/: Raydata.h  Rayscenes.h  Raystructs.h  ReSTIRSSS.h  ReSTIRSSSEvaluation.h  ReSTIRSSSEvaluationTiming.h  ReSTIRSSSVideo.h
ReSTIRSSS/include/restirsss/passes/: PassDebug.h  PassGBuffer.h  PassPathtrace.h  PassSurface.h  PassTonemapper.h  ReSTIRSSSPassCandidateGeneration.h  ReSTIRSSSPassShade.h  ReSTIRSSSPassSpatialReuse.h  ReSTIRSSSPassTemporalReuse.h
ReSTIRSSS/resources/scenes/: ajax.xml  ajaxmanylights.xml  asiandragon.xml  flattest.xml  lteorb.xml
ReSTIRSSS/resources/shaders/: arealight.glsl  defines.glsl  environment.glsl  material.glsl  raycommon.glsl  raystructs.glsl
ReSTIRSSS/resources/shaders/bxdf/: disney.glsl
ReSTIRSSS/resources/shaders/bxdf/bsdf/: bsdf.glsl  disney_bsdf.glsl  disney_diffuse.glsl  disney_metal.glsl
ReSTIRSSS/resources/shaders/bxdf/diffusion/: sss_diffusion_profile.glsl  sss_diffusion_profile_burley.glsl  sss_sampling.glsl  sss_sampling_disk.glsl
ReSTIRSSS/resources/shaders/main/: gbuffer.glsl
ReSTIRSSS/resources/shaders/main/passes/: pass_debug.comp  pass_gbuffer.comp  pass_pathtrace.comp  pass_surface.comp  pass_tonemapper.comp  restirsss_pass_candidate_generation.comp  restirsss_pass_shade.comp  restirsss_pass_spatial_reuse.comp  restirsss_pass_temporal_reuse.comp
ReSTIRSSS/resources/shaders/main/restirsss/: restirsss_defines.glsl  restirsss_disney_bsdf.glsl  restirsss_disney_bssrdf.glsl  restirsss_mis.glsl  restirsss_pixel_info.glsl  restirsss_reservoir.glsl  restirsss_shift.glsl  restirsss_shift_hybrid_criterion.glsl  restirsss_spatial_kernel.glsl  restirsss_target_function.glsl
ReSTIRSSS/resources/shaders/main/restirsss/probinversetest/: restirsss_shift_test.glsl  restirsss_target_function_test.glsl
ReSTIRSSS/resources/shaders/trace/: trace.glsl  trace_rayquery.glsl
ReSTIRSSS/resources/shaders/utility/: colormap.glsl  constants.glsl  normal_mapping.glsl  random.glsl
ReSTIRSSS/resources/shaders/visibility/: visibility.glsl
ReSTIRSSS/src/denoiser/: DenoiserOptiX.cpp
ReSTIRSSS/src/restirsss/: ReSTIRSSS.cpp  ReSTIRSSSEvaluation.cpp  ReSTIRSSSEvaluationTiming.cpp  ReSTIRSSSVideo.cpp
VkRaven/: CMakeLists.txt  README.md
VkRaven/cmake/: setup.cmake
VkRaven/cmake/find/: FindOptix.cmake
VkRaven/lib/: CMakeLists.txt
VkRaven/raven/: CMakeLists.txt
VkRaven/raven/include/raven/: RavenInclude.h
VkRaven/raven/include/raven/core/: AccelerationStructure.h  Application.h  Buffer.h  GPUContext.h  HeadlessApplication.h  Image.h  Queues.h  Renderer.h  Shader.h  SwapChain.h  Texture.h  TimingHeadlessApplication.h  Uniform.h  VideoHeadlessApplication.h  VkDebugUtils.h
VkRaven/raven/include/raven/passes/: ImGuiPass.h  Pass.h  PassCompute.h  PassShader.h  PassShaderCompute.h  PassShaderRayTracing.h
VkRaven/raven/include/raven/rendergraph/: RenderGraph.h  RenderGraphPass.h  RenderGraphResource.h
VkRaven/raven/include/raven/scene/: ISceneLoader.h  RavenLight.h  RavenMaterial.h  RavenScene.h  RavenSceneNode.h  RavenSceneObject.h  RavenTexture.h
VkRaven/raven/include/raven/scene/loader/: GLTFLoader.h
VkRaven/raven/include/raven/util/: AABB.h  Camera.h  ImagePFM.h  Paths.h  Trajectory.h
VkRaven/raven/include/raven/util/animation/: BSpline.h
VkRaven/raven/include/raven/util/sampling/: AliasTable.h
VkRaven/raven/src/raven/core/: Application.cpp  GPUContext.cpp  HeadlessApplication.cpp  Queues.cpp  RavenVkDynamicLoader.cpp  TimingHeadlessApplication.cpp  VideoHeadlessApplication.cpp
